# nsapi

./: .flake8  .gitignore  .pylintrc  README.md  autologin.py  cardsend.py  cardsort.py  changer.py  cross.py  endings.py  endorsed.py  endorsements.py  endotarter.py  issuecounter.py  legendaryCards.json  login.py  mypy.ini  nationcollector.py  nsapi.py  pyproject.toml  regioncardpop.py  reportparser.py  rosterread.py  rosterupdate.py  status.py  tradeauditor.py  update.py  waresidents.py  wfe.py
autologin/: __init__.py  __main__.py  autologin.py  login.py
cards/: __init__.py  cardsend.py  cardsort.py  issuecounter.py  rarityfinder.py  regioncardpop.py  risegenerator.py  tradeauditor.py
influence/: __init__.py  apitrigger.py
manage/: __init__.py  answerer.py  changer.py
nsapi/: __init__.py  __main__.py  api.py  config.py  core.py  exceptions.py  models.py  nsapi.py  parser.py  resources.py
roster/: __init__.py  __main__.py  deployed.py  rosterread.py  rosterupdate.py
search/: __init__.py  nationcollector.py  rmb.py  status.py  update.py
userscripts/: antimove.user.js  crossbinder.user.js  keybinder.user.js
wa/: __init__.py  cross.py  endorsed.py  endorsements.py  wapopulation.py  waresidents.py
