[tool.poetry]
name = "nsapi"
version = "0.0.0"
description = "Python wrapper for the NationStates API"
authors = ["HN67"]

[tool.poetry.dependencies]
python = ">=3.6"
requests = "^2.25"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
